--- a/esignet-default.properties
+++ b/esignet-default.properties
@@ -127,9 +127,9 @@ mosip.esignet.kafka.linked-auth-code.topic=esignet-consented
 
 mosip.esignet.integration.scan-base-package=io.mosip.authentication.esignet.integration,io.mosip.esignet.mock.integration
 mosip.esignet.integration.binding-validator=BindingValidatorServiceImpl
-mosip.esignet.integration.authenticator=IdaAuthenticatorImpl
-mosip.esignet.integration.key-binder=IdaKeyBinderImpl
-mosip.esignet.integration.audit-plugin=IdaAuditPluginImpl
+mosip.esignet.integration.authenticator=MockAuthenticationService
+mosip.esignet.integration.key-binder=MockKeyBindingWrapperService
+mosip.esignet.integration.audit-plugin=LoggerAuditService
 mosip.esignet.integration.captcha-validator=GoogleRecaptchaValidatorService
 mosip.esignet.integration.vci-plugin=IdaVCIssuancePluginImpl
 
@@ -228,14 +228,15 @@ mosip.esignet.cache.security.algorithm-name=AES/ECB/PKCS5Padding
 
 mosip.esignet.cache.names=clientdetails,preauth,authenticated,authcodegenerated,userinfo,linkcodegenerated,linked,linkedcode,linkedauth,consented,authtokens,bindingtransaction,vcissuance,apiRateLimit,blocked
 
-#spring.cache.type=redis
-#spring.cache.cache-names=${mosip.esignet.cache.names}
-#spring.redis.host=localhost
-#spring.redis.port=6379
+spring.cache.type=redis
+spring.cache.cache-names=${mosip.esignet.cache.names}
+spring.redis.host=redis-master-0.redis-headless.redis.svc.cluster.local
+spring.redis.port=6379
+spring.redis.password=${redis.password}
 management.health.redis.enabled=false
 
 # 'simple' cache type is only applicable only for Non-Production setup
-spring.cache.type=simple
+#spring.cache.type=simple
 mosip.esignet.cache.key.hash.algorithm=SHA3-256
 
 # Cache size setup is applicable only for 'simple' cache type. 
@@ -396,7 +397,7 @@ mosip.kernel.keymanager.jwtsign.validate.json=false
 mosip.keymanager.dao.enabled=false
 crypto.PrependThumbprint.enable=true
 
-mosip.kernel.keymgr.hsm.health.check.enabled=true	
+mosip.kernel.keymgr.hsm.health.check.enabled=false	
 mosip.kernel.keymgr.hsm.health.key.app-id=OIDC_SERVICE	
 mosip.kernel.keymgr.hsm.healthkey.ref-id=TRANSACTION_CACHE
 mosip.kernel.keymgr.hsm.health.check.encrypt=true
@@ -410,9 +411,9 @@ mosip.kernel.keymgr.hsm.health.check.encrypt=true
 mosip.esignet.ui.wallet.config={{'wallet.name': 'walletName', 'wallet.logo-url': '/images/qr_code.png', 'wallet.download-uri': '#', \
  'wallet.deep-link-uri': 'inji://landing-page-name?linkCode=LINK_CODE&linkExpireDateTime=LINK_EXPIRE_DT' }}
 
-mosip.esignet.ui.signup.config={'signup.banner': true, 'signup.url': 'https://${mosip.signup.host}/signup'}
+mosip.esignet.ui.signup.config={'signup.banner': false, 'signup.url': ''}
 
-mosip.esignet.ui.forgot-password.config={'forgot-password': true, 'forgot-password.url': 'https://${mosip.signup.host}/reset-password'}
+mosip.esignet.ui.forgot-password.config={'forgot-password': false, 'forgot-password.url': ''}
 
 ## Configuration required to display KBI form. 
 # individual-id-field is set with field id which should be considered as an individual ID in the authenticate request.
