--- a/esignet-default.properties
+++ b/esignet-default.properties
@@ -98,7 +98,7 @@ mosip.esignet.security.auth.post-urls={'${server.servlet.path}/client-mgmt/**' :
 mosip.esignet.security.auth.put-urls={'${server.servlet.path}/client-mgmt/**' : { 'SCOPE_update_oidc_client'} }
 mosip.esignet.security.auth.get-urls={'${server.servlet.path}/system-info/**' : { 'SCOPE_get_certificate'} }
 
-mosip.esignet.security.ignore-csrf-urls=${server.servlet.path}/oidc/**,${server.servlet.path}/oauth/**,\
+mosip.esignet.security.ignore-csrf-urls=${server.servlet.path}/oidc/**, ${server.servlet.path}/client-mgmt/**,${server.servlet.path}/oauth/**,\
   ${server.servlet.path}/actuator/**,/favicon.ico,${server.servlet.path}/error,\
   ${server.servlet.path}/swagger-ui/**,${server.servlet.path}/v3/api-docs/**,\
   ${server.servlet.path}/linked-authorization/link-transaction,${server.servlet.path}/linked-authorization/authenticate,\
@@ -106,7 +106,7 @@ mosip.esignet.security.ignore-csrf-urls=${server.servlet.path}/oidc/**,${server.
   ${server.servlet.path}/vci/**,${server.servlet.path}/system-info/**,${server.servlet.path}/linked-authorization/v2/link-transaction,\
   ${server.servlet.path}/linked-authorization/v2/authenticate,${server.servlet.path}/linked-authorization/v2/consent
 
-mosip.esignet.security.ignore-auth-urls=${server.servlet.path}/csrf/**,${server.servlet.path}/authorization/**,\
+mosip.esignet.security.ignore-auth-urls=${server.servlet.path}/csrf/**, ${server.servlet.path}/client-mgmt/**,${server.servlet.path}/authorization/**,\
   ${server.servlet.path}/linked-authorization/**,${server.servlet.path}/oidc/**,${server.servlet.path}/oauth/**,\
   ${server.servlet.path}/actuator/**,/favicon.ico,${server.servlet.path}/error,${server.servlet.path}/swagger-ui/**,\
   ${server.servlet.path}/v3/api-docs/**,${server.servlet.path}/binding/**,${server.servlet.path}/vci/**
