--- a/esignet-default.properties
+++ b/esignet-default.properties
@@ -46,3 +46,8 @@ anipbj.otp.apiKey=test
 
 anipbj.otp.verify-endpoint=https://preprod.anip.bj/v1/anipbj/connexion_otp
 
+
+mosip.esignet.integration.authenticator=MockAuthenticationService
+mosip.esignet.integration.key-binder=MockKeyBindingWrapperService
+mosip.esignet.integration.audit-plugin=LoggerAuditService
+
