--- a/esignet-default.properties
+++ b/esignet-default.properties
@@ -51,3 +51,10 @@ mosip.esignet.integration.authenticator=MockAuthenticationService
 mosip.esignet.integration.key-binder=MockKeyBindingWrapperService
 mosip.esignet.integration.audit-plugin=LoggerAuditService
 
+spring.cache.type=redis
+spring.cache.cache-names=${mosip.esignet.cache.names}
+spring.redis.host=redis-master-0.redis-headless.redis.svc.cluster.local
+spring.redis.port=6379
+spring.redis.password=${redis.password}
+management.health.redis.enabled=false
+
