--- a/esignet-default.properties
+++ b/esignet-default.properties
@@ -57,4 +57,16 @@ spring.redis.host=redis-master-0.redis-headless.redis.svc.cluster.local
 spring.redis.port=6379
 spring.redis.password=${redis.password}
 management.health.redis.enabled=false
+##----------------------------------------- Database properties --------------------------------------------------------
+
+mosip.esignet.database.hostname=postgres-postgresql.postgres
+mosip.esignet.database.port=5432
+spring.datasource.url=jdbc:postgresql://${mosip.esignet.database.hostname}:${mosip.esignet.database.port}/mosip_esignet?currentSchema=esignet
+spring.datasource.username=esignetuser
+spring.datasource.password=${db.dbuser.password}
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
