--- a/esignet-default.properties
+++ b/esignet-default.properties
@@ -1,7 +1,7 @@
-#mosip.esignet.integration.scan-base-package=io.benin.esignet.plugin
-#mosip.esignet.integration.authenticator=BeninAuthenticationService
-#mosip.esignet.integration.key-binder=BeninKeyBindingWrapperService
-#mosip.esignet.integration.vci-plugin=NoOpVCIssuancePlugin
+mosip.esignet.integration.scan-base-package=io.benin.esignet.plugin
+mosip.esignet.integration.authenticator=BeninAuthenticationService
+mosip.esignet.integration.key-binder=BeninKeyBindingWrapperService
+mosip.esignet.integration.vci-plugin=NoOpVCIssuancePlugin
 
 osip.esignet.peru.authenticator.auth-factor.kba.individual-id-field=dni
 mosip.esignet.peru.authenticator.auth-factor.kba.field-details={{"id":"dni", "type":"text", "format":"", "maxLength": 8, "regex": "^[^\s]*$"},{"id":"prenombres", "type":"text", "format":"", "maxLength": 50, "regex": "^[^\s]*$"}\
@@ -47,9 +47,9 @@ anipbj.otp.apiKey=test
 anipbj.otp.verify-endpoint=https://preprod.anip.bj/v1/anipbj/connexion_otp
 
 
-mosip.esignet.integration.authenticator=MockAuthenticationService
-mosip.esignet.integration.key-binder=MockKeyBindingWrapperService
-mosip.esignet.integration.audit-plugin=LoggerAuditService
+#mosip.esignet.integration.authenticator=MockAuthenticationService
+#mosip.esignet.integration.key-binder=MockKeyBindingWrapperService
+#mosip.esignet.integration.audit-plugin=LoggerAuditService
 
 spring.cache.type=redis
 spring.cache.cache-names=${mosip.esignet.cache.names}
