--- a/esignet-default.properties
+++ b/esignet-default.properties
@@ -1,3 +1,7 @@
+mosip.esignet.integration.binding-validator=BindingValidatorServiceImpl
+mosip.esignet.integration.audit-plugin=LoggerAuditService
+mosip.esignet.integration.captcha-validator=GoogleRecaptchaValidatorService
+
 mosip.esignet.integration.scan-base-package=io.benin.esignet.plugin
 mosip.esignet.integration.authenticator=BeninAuthenticationService
 mosip.esignet.integration.key-binder=BeninKeyBindingWrapperService
