--- a/esignet-default.properties
+++ b/esignet-default.properties
@@ -73,4 +73,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+mosip.esignet.peru.authenticator.auth-factor.kba.individual-id-field=dni
 
