--- a/esignet-default.properties
+++ b/esignet-default.properties
@@ -74,4 +74,5 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 mosip.esignet.peru.authenticator.auth-factor.kba.individual-id-field=dni
+mosip.esignet.captcha.required=pwd,kbi,binding-otp
 
