--- a/esignet-default.properties
+++ b/esignet-default.properties
@@ -76,3 +76,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 mosip.esignet.peru.authenticator.auth-factor.kba.individual-id-field=dni
 mosip.esignet.captcha.required=pwd,kbi,binding-otp
 
+mosip.esignet.auth-challenge.OTP.min-length=5
+mosip.esignet.auth-challenge.OTP.max-length=5
+
