--- a/esignet-default.properties
+++ b/esignet-default.properties
@@ -75,6 +75,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 mosip.esignet.peru.authenticator.auth-factor.kba.individual-id-field=dni
 mosip.esignet.captcha.required=pwd,kbi,binding-otp
+mosip.esignet.supported.credential.scopes={'mock_identity_vc_ldp', 'mosip_identity_vc_ldp'}
+mosip.esignet.credential.scope-resource-mapping={'mock_identity_vc_ldp' : '${mosip.esignet.domain.url}${server.servlet.path}/vci/credential', 'mosip_identity_vc_ldp': '${mosip.esignet.domain.url}${server.servlet.path}/vci/credential'}
 
 mosip.esignet.auth-challenge.OTP.min-length=5
 mosip.esignet.auth-challenge.OTP.max-length=5
