--- a/esignet-default.properties
+++ b/esignet-default.properties
@@ -1,3 +1,4 @@
+mosip.esignet.cache.secure.individual-id=false
 mosip.esignet.integration.binding-validator=BindingValidatorServiceImpl
 mosip.esignet.integration.audit-plugin=LoggerAuditService
 mosip.esignet.integration.captcha-validator=GoogleRecaptchaValidatorService
