--- a/esignet-default.properties
+++ b/esignet-default.properties
@@ -7,6 +7,7 @@ mosip.esignet.integration.scan-base-package=io.benin.esignet.plugin
 mosip.esignet.integration.authenticator=BeninAuthenticationService
 mosip.esignet.integration.key-binder=BeninKeyBindingWrapperService
 mosip.esignet.integration.vci-plugin=NoOpVCIssuancePlugin
+mosip.esignet.jwks-uri=${mosip.esignet.domain.url}/.well-known/jwks.json
 
 osip.esignet.peru.authenticator.auth-factor.kba.individual-id-field=dni
 mosip.esignet.peru.authenticator.auth-factor.kba.field-details={{"id":"dni", "type":"text", "format":"", "maxLength": 8, "regex": "^[^\s]*$"},{"id":"prenombres", "type":"text", "format":"", "maxLength": 50, "regex": "^[^\s]*$"}\
