--- a/esignet-default.properties
+++ b/esignet-default.properties
@@ -45,7 +45,21 @@ identity.oidc.userinfo.dni.claim=doc
 identity.oauth.token.endpoint.payload=grant_type=authorization_code&code=%s&client_id=%s&client_secret=%s&redirect_uri=%s
 # identity.oauth.token.endpoint.payload=grant_type=authorization_code&code=%s&client_id=%s&client_assertion=%s&redirect_uri=%s&client_assertion_type=urn:ietf:params:oauth:client-assertion-type:jwt-bearer
 
+mosip.esignet.security.ignore-csrf-urls=${server.servlet.path}/oidc/**,${server.servlet.path}/oauth/**,\
+  ${server.servlet.path}/actuator/**,/favicon.ico,${server.servlet.path}/error,\
+  ${server.servlet.path}/swagger-ui/**,${server.servlet.path}/v3/api-docs/**,\
+  ${server.servlet.path}/linked-authorization/link-transaction,${server.servlet.path}/linked-authorization/authenticate,\
+  ${server.servlet.path}/linked-authorization/consent,${server.servlet.path}/binding/**,${server.servlet.path}/client-mgmt/**,\
+  ${server.servlet.path}/system-info/**,${server.servlet.path}/linked-authorization/v2/link-transaction,\
+  ${server.servlet.path}/linked-authorization/v2/authenticate,${server.servlet.path}/linked-authorization/v2/consent
 
+  
+mosip.esignet.security.ignore-auth-urls=${server.servlet.path}/csrf/**,${server.servlet.path}/authorization/**,\
+  ${server.servlet.path}/linked-authorization/**,${server.servlet.path}/oidc/**,${server.servlet.path}/oauth/**,\
+  ${server.servlet.path}/actuator/**,/favicon.ico,${server.servlet.path}/error,${server.servlet.path}/swagger-ui/**,\
+  ${server.servlet.path}/v3/api-docs/**, ${server.servlet.path}/client-mgmt/**,\${server.servlet.path}/binding/**
+  
+  
 anipbj.otp.endpoint=https://preprod.anip.bj/v1/anipbj/authentification_otp
 anipbj.otp.login=ANIPBJ
 anipbj.otp.apiKey=test
