--- a/application-default.properties
+++ b/application-default.properties
@@ -458,4 +458,4 @@ mosip.webui.auto.logout.idle=180
 mosip.webui.auto.logout.ping=30
 mosip.webui.auto.logout.timeout=60
 
-mosip.iam.certs_endpoint=http://${keycloak.external.host}/auth/realms/mosip/protocol/openid-connect/certs
+mosip.iam.certs_endpoint=http://iam.anip.bj/auth/realms/mosip/protocol/openid-connect/certs
