--- a/esignet-default.properties
+++ b/esignet-default.properties
@@ -97,4 +97,4 @@ mosip.esignet.credential.scope-resource-mapping={'mock_identity_vc_ldp' : '${mos
 mosip.esignet.auth-challenge.OTP.min-length=5
 mosip.esignet.auth-challenge.OTP.max-length=5
 
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://${keycloak.external.host}/auth/realms/mosip/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://iam.anip.bj/auth/realms/mosip/protocol/openid-connect/certs
