--- a/esignet-default.properties
+++ b/esignet-default.properties
@@ -96,3 +96,5 @@ mosip.esignet.credential.scope-resource-mapping={'mock_identity_vc_ldp' : '${mos
 
 mosip.esignet.auth-challenge.OTP.min-length=5
 mosip.esignet.auth-challenge.OTP.max-length=5
+
+anipbj.consultation_donnee.endpoint=https://preprod.anip.bj/v1/anipbj/consultation_donnee
