--- a/partner-management-default.properties
+++ b/partner-management-default.properties
@@ -153,7 +153,7 @@ mosip.keycloak.admin.secret.key=${keycloak.admin.password}
 ## Auth adapter
 auth.server.validate.url=${mosip.kernel.authmanager.url}/v1/authmanager/authorize/admin/validateToken
 auth.server.admin.validate.url=${mosip.kernel.authmanager.url}/v1/authmanager/authorize/admin/validateToken
-auth.server.admin.allowed.audience=mosip-creser-client,mosip-datsha-client,mosip-ida-client,mosip-regproc-client,mosip-admin-client,mosip-reg-client,mosip-pms-client,mosip-resident-client,mosip-idrepo-client,mosip-deployment-client
+auth.server.admin.allowed.audience=mosip-creser-client,mosip-datsha-client,mosip-ida-client,mosip-regproc-client,mosip-admin-client,mosip-reg-client,mosip-pms-client,mosip-resident-client,mosip-idrepo-client,mosip-partner-client,mosip-deployment-client,mosip-partnermanager-client
 auth.jwt.secret=authjwtsecret
 auth.jwt.base=Mosip-Token
 
@@ -168,7 +168,7 @@ mosip.iam.adapter.self-token-renewal-enable=true
 mosip.auth.filter_disable=false
 
 #To populate required roles which should be allowed in UI.(Roles are nothing but partner types)
-mosip.pms.ui.required.roles=AUTH_PARTNER,DEVICE_PROVIDER,CREDENTIAL_PARTNER,FTM_PROVIDER,MISP_PARTNER,POLICYMANAGER,PARTNER_ADMIN
+mosip.pms.ui.required.roles=AUTH_PARTNER,DEVICE_PROVIDER,CREDENTIAL_PARTNER,FTM_PROVIDER,MISP_PARTNER,POLICYMANAGER,PARTNER_ADMIN,PARTNERMANAGER
 
 # To configure misp partner type
 mosip.pms.misp.partner.type=MISP_Partner
@@ -328,3 +328,8 @@ mosip.pms.esignet.oauth-client-update-url=${mosip.esignet.service.url}/v1/esigne
 
 ## IDP Service api to fetch OIDC Client configuration 
 mosip.pms.esignet.config-url=${mosip.esignet.service.url}/v1/esignet/oidc/.well-known/openid-configuration
+
+# Indicates whether the root and intermediate CA certificates are available in MOSIP platform
+mosip.pms.ca.signed.partner.certificate.available=true
+mosip.pms.oidc.client.available=true
+mosip.pms.root.and.intermediate.certificates.available=false
