Renaming the property

--- a/credential-service-default.properties
+++ b/credential-service-default.properties
@@ -4,6 +4,10 @@
 #   mosip.creser.client.secret 
 #   
 
+# ===local alias ===
+mosip.creser.client.secret.local=CHANGE_ME_SECRET_VALUE
+mosip.creser.client.secret=${mosip.creser.client.secret.local}
+
 # IDRepo credential service authentication details
 mosip.idrepo.credential.auth.client-id=mosip-creser-client
 mosip.idrepo.credential.auth.secret-key=${mosip.creser.client.secret}
