--- a/id-authentication-default.properties
+++ b/id-authentication-default.properties
@@ -271,7 +271,6 @@ ida-topic-fraud-analysis=IDA_FRAUD_ANALYTICS
 ida-topic-auth-anonymous-profile=ANONYMOUS_PROFILE
 ida-topic-pmp-oidc-client-created=OIDC_CLIENT_CREATED
 ida-topic-pmp-oidc-client-updated=OIDC_CLIENT_UPDATED
-ida-topic-on-demand-template-extraction=AUTHENTICATION_ERRORS
 
 # in minutes
 mosip.iam.adapter.validate-expiry-check-rate=15
@@ -447,9 +446,14 @@ ida.credential.store.retry.backoff.exponential.max.interval.millisecs=120000
 ## Configurations needed for dependent libraries
 ## Softhsm
 mosip.kernel.keymanager.certificate.default.common-name=www.mosip.io
-mosip.kernel.keymanager.hsm.config-path=/config/softhsm-application.conf
-mosip.kernel.keymanager.hsm.keystore-type=PKCS11
+mosip.kernel.keymanager.hsm.config-path=/home/mosip/config/keys.p12
+mosip.kernel.keymanager.hsm.keystore-type=PKCS12
 mosip.kernel.keymanager.hsm.keystore-pass=${softhsm.ida.security.pin}
+# keymigration role
+mosip.role.keymanager.postmigratebasekey=KEY_MIGRATION_ADMIN
+mosip.role.keymanager.getzktempcertificate=KEY_MIGRATION_ADMIN
+mosip.role.keymanager.postmigratezkkeys=KEY_MIGRATION_ADMIN
+auth.server.admin.allowed.audience=mosip-migration-client,mpartner-default-auth
 
 ## Security - used in Internal Authentication Services by default Kernel Auth Adapter
 mosip.security.csrf-enable=false
@@ -502,7 +506,7 @@ keymanager_database_url=jdbc:postgresql://${mosip.ida.database.hostname}:${mosip
 keymanager_database_username=${mosip.ida.database.user}
 keymanager_database_password=${db.dbuser.password}
 mosip.kernel.keymanager.autogen.appids.list=ROOT,${application.id},${mosip.sign.applicationid}:${mosip.sign.refid},${application.id}:${mosip.kernel.zkcrypto.masterkey.reference.id},IDA_KYC_EXCHANGE,IDA_KEY_BINDING,IDA_VCI_EXCHANGE
-mosip.kernel.keymanager.autogen.basekeys.list=${application.id}:${internal.reference.id},${application.id}:${partner.reference.id},${application.id}:${partner.biometric.reference.id},${application.id}:${mosip.kernel.zkcrypto.publickey.reference.id},${application.id}:${ida-auth-partner-id}
+mosip.kernel.keymanager.autogen.basekeys.list=
 zkcrypto.random.key.generate.count=0
 keymanager.persistence.jdbc.schema=ida
 
@@ -648,7 +652,16 @@ mosip.ida.vci.supported.cred.types=VerifiableCredential,MOSIPVerifiableCredentia
 # if the input handle is +855345353453@phone then the provided regex is used to validate the input.  
 mosip.ida.handle-types.regex={ '@phone' : '^\\+91[1-9][0-9]{7,9}@phone$' }
 
+#-------------------------------- Authentication error eventing-------------------------------
+#It enable and disable the bean init of kafka and Authentication error eventing
+mosip.ida.authentication.error.eventing.enabled=true
+#If we enable authentication error eventing as true we need all the below property
+ida-topic-authentication-error-eventing=AUTHENTICATION_ERRORS
 # Partner Id for encryption used in ondemand template extraction
-mosip.ida.ondemand.template.extraction.partner.id=mpartner-default-tempextraction
-
-ida-topic-on-demand-template-extraction=AUTHENTICATION_ERRORS
+mosip.ida.authentication.error.eventing.encrypt.partner.id=mpartner-default-tempextraction
+#kafka Configuration
+mosip.ida.kafka.bootstrap.servers=kafka-0.kafka-headless.${kafka.profile}:${kafka.port},kafka-1.kafka-headless.${kafka.profile}:${kafka.port},kafka-2.kafka-headless.${kafka.profile}:${kafka.port}
+spring.kafka.admin.properties.allow.auto.create.topics=true
+logging.level.org.apache.kafka=DEBUG
+#----------------------------------------------------end------------------------------------------
+mosip.kernel.keymgr.hsm.health.check.enabled=false
