Add 'npi' field to identity mapping JSON

--- a/identity-mapping.json
+++ b/identity-mapping.json
@@ -6,6 +6,9 @@
 		"selectedHandles" : {
 			"value" : "selectedHandles"
 		},
+		"npi": {
+		  "value": "npi"
+		},
 		"name": {
 			"value": "fullName"
 		},
