--- a/id-repository-default.properties
+++ b/id-repository-default.properties
@@ -447,3 +447,31 @@ mosip.idrepo.identity.max-request-time-deviation-seconds=60
 #logging.level.org.springframework.cache=TRACE
 # By default, it is false. To enable force merge of data, change it to true.
 mosip.idrepo.create-identity.enable-force-merge=false
+
+mosip.identity.get.excluded.attribute.list=UIN,verifiedAttributes,IDSchemaVersion
+mosip.role.idrepo.identity.postidvidid=REGISTRATION_PROCESSOR,RESIDENT,REGISTRATION_ADMIN,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,ID_AUTHENTICATION,ID_REPOSITORY
+IDREPORETRIEVEIDBYID=${mosip.idrepo.identity.url}/idrepository/v1/identity/idvid/
+# this property is used for update handle fields 
+mosip.idrepo.update-identity.fields-to-replace={"selectedHandles","phone","email"}
+
+# Thread pool properties for biometric extraction
+mosip.idrepo.extract.template.core-pool-size=50
+mosip.idrepo.extract.template.max-pool-size=100
+
+## This Property used in Credential-request-generator RestTemplate
+idrepo.default.processor.httpclient.connections.max.per.host=100
+idrepo.default.processor.httpclient.connections.max=700
+
+## This property Used commonly to call Rest API Call
+mosip.kernel.http.selftoken.restTemplate.max-connection-per-route=100
+mosip.kernel.http.selftoken.restTemplate.total-max-connections=700
+
+## This Property used in Idrepo-vid-Service
+mosip.kernel.http.default.restTemplate.max-connection-per-route=100
+mosip.kernel.http.default.restTemplate.total-max-connections=700
+
+## This Property used in Idrepo-Credential-service
+mosip.kernel.http.plain.restTemplate.max-connection-per-route=100
+mosip.kernel.http.plain.restTemplate.total-max-connections=700
+
+mosip.idrepo.vid.disable-support=false
