--- a/id-repository-default.properties
+++ b/id-repository-default.properties
@@ -441,7 +441,7 @@ mosip.idrepo.credential-request-v2.rest.timeout=100
 mosip.idrepo.identity.disable-uin-based-credential-request=false
 # Field Id as in the identity schema will be the key and value is the actual postfix to append. Empty values are also supported.
 # This configuration is considered only when mentioned fieldId is marked to be a handle in the identity schema and it is one of the selectedHandle in the ID-object.
-mosip.identity.fieldid.handle-postfix.mapping={'phone':'@phone'}
+mosip.identity.fieldid.handle-postfix.mapping={'npi':'@npi'}
 mosip.idrepo.identity.max-request-time-deviation-seconds=60
 #Enable this property only when to check cache log
 #logging.level.org.springframework.cache=TRACE
@@ -452,7 +452,7 @@ mosip.identity.get.excluded.attribute.list=UIN,verifiedAttributes,IDSchemaVersio
 mosip.role.idrepo.identity.postidvidid=REGISTRATION_PROCESSOR,RESIDENT,REGISTRATION_ADMIN,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,ID_AUTHENTICATION,ID_REPOSITORY
 IDREPORETRIEVEIDBYID=${mosip.idrepo.identity.url}/idrepository/v1/identity/idvid/
 # this property is used for update handle fields 
-mosip.idrepo.update-identity.fields-to-replace={"selectedHandles","phone","email"}
+mosip.idrepo.update-identity.fields-to-replace={"selectedHandles","npi"}
 
 # Thread pool properties for biometric extraction
 mosip.idrepo.extract.template.core-pool-size=50
