--- a/id-authentication-default.properties
+++ b/id-authentication-default.properties
@@ -426,7 +426,7 @@ kernel.retry.exponential.backoff.max.interval.millisecs=1000
 ## Whether to traverse to the root cause exception from the exception thrown and use the same root cause to decide whether to retry or not. Default is true.
 kernel.retry.traverse.root.cause.enabled=false
 ## Comma separated List of fully qualified Exceptions which are retryable (inclusion list). Their subclasses will also be considered in the evaluation.
-kernel.retry.retryable.exceptions=io.mosip.idrepository.core.exception.IdRepoRetryException,org.springframework.dao.DataIntegrityViolationException,org.hibernate.exception.ConstraintViolationException,org.springframework.orm.ObjectOptimisticLockingFailureExceptionf
+kernel.retry.retryable.exceptions=io.mosip.idrepository.core.exception.IdRepoRetryException,org.springframework.dao.DataIntegrityViolationException,org.hibernate.exception.ConstraintViolationException,org.springframework.orm.ObjectOptimisticLockingFailureException
 ## Comma separated List of fully qualified Exceptions which are not-retryable (exclusion list). Their subclasses will also be considered in the evaluation.
 kernel.retry.nonretryable.exceptions=
 
@@ -650,7 +650,9 @@ mosip.ida.vci.supported.cred.types=VerifiableCredential,MOSIPVerifiableCredentia
 
 # Regex to validate handles with provided key as the postfix
 # if the input handle is +855345353453@phone then the provided regex is used to validate the input.  
-mosip.ida.handle-types.regex={ '@phone' : '^\\+91[1-9][0-9]{7,9}@phone$' }
+mosip.ida.handle-types.regex={'@npi' : '^[0-9]{8,15}@npi$'}
+
+mosip.kernel.keymanager.autogen.basekeys.list=${application.id}:${internal.reference.id},${application.id}:${partner.reference.id},${application.id}:${partner.biometric.reference.id},${application.id}:${mosip.kernel.zkcrypto.publickey.reference.id},${application.id}:${ida-auth-partner-id}
 
 #-------------------------------- Authentication error eventing-------------------------------
 #It enable and disable the bean init of kafka and Authentication error eventing
